# fat32-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: 1.md
example/fat32-fs-std/: .gitignore  Makefile
example/fat32-fs-std/src/: device.rs  main.rs
examples/fat32-fs-std/: Cargo.toml
examples/fat32-fs-std/src/: device.rs  main.rs
src/: block_cache.rs  block_device.rs  bpb.rs  cache.rs  device.rs  dir.rs  entry.rs  fat.rs  file.rs  fs.rs  lib.rs  vfs.rs
