[package]
name = "fat32-rs-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fat32 = { path = "../../" }
spin = "0.9.2"
lazy_static = "1.4.0"
lru = "0.10.0"
log = "0.4.0"
clap = "4.1.12"
rand = "0.8.0"
chrono = "0.4.0"